--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.0",
     "@types/cors": "^2.8.12",
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ts-node-dev": "^1.1.8",
     "tsc": "^2.0.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.0",
-    "nodemon": "^2.0.13",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
   },
   "scripts": {
     "build": "tsc",
